# rust-matmath

./: Cargo.toml
src/: game.rs  lib.rs  matrix.rs  matrix_class.rs  matrix_helper.rs  special_matrices.rs  std_vec_tools.rs  vec_tools.rs  vector.rs  vector_class.rs
