[package]
name = "matmath"
version = "1.0.0"
authors = ["T0mstone <realt0mstone@gmail.com>"]

description = "Matrix and Vector Math with Generic Type Elements"

documentation = "https://docs.rs/matmath"
repository = "https://github.com/T0mstone/rust-matmath"

keywords = ["matrix-multiplication", "matrix-math", "vector-math", "matrix", "vector"]

categories = ["data-structures"]


[dependencies]
